--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     
   
       <div class="templateContainer" width="1600px" height="900">
-        <div class="contentContainer">
+        <div class="contentContainer" contenteditable>
           <p class="header">{{finalBookName + finalChapter + ":" + finalFromVerse + "-" + finalToVerse}}</p>
           <br />
           <div class="list">
