--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   
       <div class="templateContainer" width="1600px" height="900">
         <div class="contentContainer" contenteditable>
-          <p class="header">{{finalBookName || "" + finalChapter || "" + ":" + finalFromVerse || "" + "-" + finalToVerse || ""}}</p>
+          <p class="header">{{finalBookName || ""}} {{finalChapter || ""}} : {{finalFromVerse || ""}} - {{finalToVerse || ""}}</p>
           <br />
           <div class="list">
             <p class="list-items" ng-repeat="verse in selectedVerse">
